--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.43.1",
+    "framer-motion": "^12.23.16",
+    "lucide-react": "^0.544.0",
     "next": "14.2.5",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "@supabase/supabase-js": "^2.43.1"
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
+    "@types/node": "^20.5.9",
     "@types/react": "^18.2.14",
-    "@types/node": "^20.5.9"
+    "typescript": "^5.2.2"
   }
 }
